# unified-trading-system-ui

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .env.integration  .env.preview  .env.production  .env.production.buildtest  .firebaserc  .gcloudignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  20260323.md  AGENT_PROMPT.md  ARCHITECTURE_AND_WORKFLOW_OVERVIEW.md  ARCHITECTURE_HARDENING.md  BACKEND_ALIGNMENT.md  BATCH_3_MIGRATION_BRIEF.md  CODEBASE_STRUCTURE.md  CODING_RULES_QUICK_START.md  COMPLIANCE_REFACTOR.md  Dockerfile  MERGE_PLAN.md  PLANS_1.md  PLANS_2.md  PLANS_3.md  PROGRESS.md  QA_GATES.md  README.md  REFACTORING_GUIDE.md  REFACTORING_PLAN_PHASE_1-4.md  ROUTES.md  SERVICE_COMPLETION_STATUS.md  SETUP_SUMMARY.md  START_HERE.md  TESTING.md  UI-UX-Enhancements.md  UI_STRUCTURE_MANIFEST.json  (+29 more)
_reference/deployment-api/: .basedpyright-baseline.json.bak2  .gitignore  .pre-commit-config.yaml  Dockerfile  QUALITY_GATE_BYPASS_AUDIT.md  README.md  buildspec.aws.yaml  cloudbuild.yaml  codex-data  gunicorn.conf.py  pm-configs  pm-plans  pyproject.toml  pyrightconfig.json  run-api.sh
_reference/deployment-api/deployment_api/: __init__.py  __main__.py  app_config.py  auth.py  auth_middleware.py  background_sync.py  config_loader.py  deployment_api_config.py  gunicorn.conf.py  health_routes.py  lifespan.py  main.py  metrics.py  middleware.py  mock_data.py  mock_state.py  rbac.py  settings.py
_reference/deployment-api/docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  GCS_PATHS.md  SCHEMA_VALIDATION.md  TESTING.md
_reference/deployment-api/scripts/: quality-gates.sh  setup-workspace.sh
_reference/deployment-api/tests/: __init__.py  conftest.py  mocks.py
_reference/deployment-service/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUALITY_GATE_BYPASS_AUDIT.md  README.md  buildspec.aws.yaml  cleanup_old_instruments_parquet.py  cloudbuild.yaml  coverage.json  deploy.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  run-api.sh
_reference/deployment-service/audit/: ARCHIVE.md  CURRENT_AUDIT.md  DEPLOYMENT_SPLIT_AUDIT_REPORT.md
_reference/deployment-service/configs/: BUCKET_CONFIG_SCHEMA.md  README.md  RUNTIME_DEPLOYMENT_TOPOLOGY_DAG.dot  RUNTIME_TOPOLOGY_DECISIONS.md  cloud-providers.yaml  generate_topology_svg.py  in_memory_tick_queue.py  unified-trading-system-repos.code-workspace  unified-trading-system-repos.code-workspace-2.code-workspace
_reference/deployment-service/deploy/: deploy
_reference/deployment-service/deployment_service/: __init__.py  __main__.py  advisor.py  catalog.py  cli.py  cloud_client.py  config_loader.py  config_reloaders.py  dependencies.py  deployment_commands.py  deployment_config.py  events.py  live_deployment.py  metrics.py  monitor.py  orchestrator.py  runtime_topology_validator.py  shard_builder.py  shard_calculator.py  smoke_test_framework.py
_reference/deployment-service/docs/: ARCHITECTURE.md  BIGQUERY_INTEGRATION_GUIDE.md  CACHE_AND_STATE.md  CLOUD_AGNOSTIC_MIGRATION.md  CLOUD_BUILD_SUCCESS_CHECKLIST.md  COMPREHENSIVE_SERVICE_AUDIT_FRAMEWORK.md  CONFIGURATION.md  COST.md  DEPLOYMENT_GUIDE.md  E2E_SPECS.md  GCS_AND_SCHEMA.md  GCS_LIFECYCLE_AGGRESSIVE_STRATEGY.md  GCS_LIFECYCLE_COST_OPTIMIZATION.md  GCS_PATHS.md  GITHUB_TOKEN_CLOUD_BUILD.md  HARDENING.md  IMPLEMENTATION_MAX_WORKERS.md  INDEX.md  INFRASTRUCTURE.md  LIVE_MODE.md  MASTER_IMPLEMENTATION_INDEX.md  MASTER_ML_IMPLEMENTATION_PLAN.md  MAX_WORKERS_UNIFIED_IMPLEMENTATION_PLAN.md  MIGRATION.md  ML_IMPLEMENTATION.md  RESOURCE_MONITORING_AND_RIGHTSIZING.md  RUNBOOKS.md  SCHEMA_VALIDATION.md  SHARDING_AND_DATA_ALIGNMENT.md  SPECS.md  STANDARDIZED_EVENT_LOGGING.md  TESTING.md  UI_SPEC.md  UI_TYPESCRIPT_TYPES.md  VM_HEALTH_AND_GCSFUSE_OPTIMIZATION.md  cli.md  dev-environment.md  hybrid-live-seam.md  service-bundling-review.md  setup.md
_reference/deployment-service/scripts/: _common.py  add-collaborators.sh  add-gh-pat-to-repos.sh  aggregate_instruments.py  check-ruff-versions.sh  check_cloudbuild_args_limit.py  check_observability_migration.py  check_test_alignment.sh  cleanup-branch-env.sh  cleanup-cloud-build-artifacts.sh  cleanup-cloud-run-executions.sh  cleanup-cloud-run-revisions.sh  cleanup-orphan-vms.py  cleanup-untagged-images.sh  copy-gcp-sa-key-to-repos.sh  create-positions-bigquery-tables.sh  create_bigquery_external_tables.sh  create_bigquery_tables_AFTER_DATA.sh  create_event_logging_tests.py  delete_old_gcs_structure.sh  deploy-dashboard-gce-vm.sh  deploy-dashboard.sh  download_instruments.py  migrate_defi_paths.py  migrate_options_structure.py  migrate_venue_directories.py  monitor-cloud-builds.sh  poll_deployment_dashboard_build.sh  quality-gates.sh  refresh_data_catalogue.py  reorganize_gcs_by_venue.sh  reorganize_gcs_defi.py  reorganize_gcs_fast.py  reorganize_gcs_parallel.py  run-all-quality-gates.sh  run-uv-lock-all.sh  setup-billing-alerts.sh  setup-branch-protection.sh  setup-buckets.py  setup-cloud-build-triggers.sh  (+16 more)
_reference/deployment-service/templates/: .gitignore_template  branch-protection-template.md  buildspec.aws.yaml  env.example.multicloud  github-actions-aws.yaml  makefile-template-python.mk  makefile-template-typescript.mk  python-quality-gates-template.yml  typescript-quality-gates-template.yml
_reference/deployment-service/terraform/: README.md
_reference/deployment-service/tests/: conftest.py  mocks.py  test_imports.py
_reference/deployment-service/tools/: check_ml_dependencies_by_mode.py
_reference/versa-invoicing/: README.md  VERSA_README.md  client_specifics.md  example_btc_report_jan.html  example_btc_report_nov.html  pyproject.toml  reporting_ui.html
_reference/versa-invoicing/clients/: ANU_client.md  ET_eqvilent.md  GP_gpd_capital.md  IK_pooled_investment.md  NN_namnar.md  PR_prism.md  SL2_shaun_lim_2.md  SL_shaun_lim.md  STD_steady_hash.md
_reference/versa-invoicing/context/: CONTEXT_GUIDE.md
_reference/versa-invoicing/data/: sample_mr_data.csv
_reference/versa-invoicing/scripts/: build_report.py  (+1 more)
(+4782 files in other folders)
