[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "deployment-api"
version = "0.1.1"
description = "Standalone FastAPI API for the deployment monitoring dashboard"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "gunicorn>=22.0.0,<23.0.0",
    "pydantic>=2.12.5,<3.0.0",
    # Auth
    "google-auth>=2.40.0,<3.0.0",
    # Metrics
    "prometheus-client>=0.20.0,<1.0.0",
    # HTTP client
    "httpx>=0.28.1,<1.0.0",
    # GitHub API (service status checkers)
    "PyGithub>=2.0.0,<3.0.0",
    # Async HTTP (service status checks)
    "aiohttp>=3.13.2,<4.0.0",
    # Cache
    "jsonpickle>=3.0.0,<4.0.0",
    "cachetools>=5.0.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",
    # LLM commentary (pipeline UAT — optional at runtime, required as dep)
    "anthropic<1.0.0,>=0.49.0",
    # Internal libraries
    "unified-trading-library>=0.1.0,<1.0.0",
    "unified-events-interface>=0.1.0,<1.0.0",
    "unified-config-interface>=0.1.0,<1.0.0",
    "unified-cloud-interface>=0.1.0,<1.0.0",
    "unified-internal-contracts>=0.1.0,<1.0.0",
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "pytest-mock>=3.15.0,<4.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "ruff==0.15.0",
    "basedpyright==1.38.2",
    "pip-audit>=2.7.0,<3.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pyjwt>=2.12.0,<3.0.0",
    "cryptography>=46.0.5",
]

[tool.uv.sources]
unified-trading-library = { path = "../unified-trading-library", editable = true}
unified-events-interface = { path = "../unified-events-interface", editable = true}
unified-config-interface = { path = "../unified-config-interface", editable = true}
unified-cloud-interface = { path = "../unified-cloud-interface", editable = true}
unified-internal-contracts = { path = "../unified-internal-contracts", editable = true}
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "G",
"C90",]
ignore = ["B008"]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"deployment_api/gunicorn.conf.py" = ["N999"]
"deployment_api/main.py" = ["E402"]
"deployment_api/routes/service_status_fast_data.py" = ["E402"]
"deployment_api/routes/deployment_state.py" = ["C901"]
"deployment_api/routes/deployment_validation.py" = ["C901"]
"deployment_api/workers/deployment_processor.py" = ["E402"]
"deployment_api/utils/cache.py" = ["E402"]
"tests/**" = ["SIM117", "SIM105", "F841", "RUF059", "N806", "E402", "E501", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportAny = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownParameterType = "error"
# Private helpers are imported directly by the test suite; disable the "not
# accessed within module" diagnostic to avoid false positives.
reportUnusedFunction = "none"
reportUnusedImport = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (require GCP credentials)",
    "deployment_test: requires running service container (real HTTP calls via docker-compose.single.yml)",
]

[tool.coverage.run]
omit = [
    "deployment_api/__main__.py",
    "deployment_api/main.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
