[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-report"
version = "0.1.0"
description = "Mean reversion reporting and investor communication tools"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "Proprietary"}

dependencies = [
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "pandas>=2.3.0,<3.0.0",
    "lxml>=4.9.3,<5.0.0",
    "selenium>=4.15.0,<5.0.0",
    "webdriver-manager>=4.0.1,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.25.0,<2.0.0",
    "ruff==0.15.0",
    "pandas-stubs>=2.2.0,<3.0.0",  # Type stubs for pandas (basedpyright)
    "types-requests>=2.32.0,<3.0.0",  # Type stubs for requests
]

[tool.setuptools.packages.find]
include = ["mr_report*"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

